--- a/inc/customizer/custom-controls/assets/css/unminified/font-presets.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/font-presets.css
@@ -146,11 +146,10 @@ div .ast-field-settings-modal .customize-control-ast-font-extras {
 .ast-font-unit-wrapper {
 	display: flex;
 	gap: 6px;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: 500;
 	color: #9CA3AF;
 }
-
 .ast-font-unit-wrapper span {
 	cursor: pointer;
 }
